--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -467,10 +467,22 @@ Host: localhost:8080
 {"id":null,"name":"playlist 2"}</code></pre>
 </div>
 </div>
+<h1 id="_when_adding_a_new_playlist_with_a_no_name" class="sect0">When adding a new playlist with a No Name</h1>
+<div class="listingblock">
+<div class="title">request</div>
+<div class="content">
+<pre class="highlight nowrap"><code class="language-http" data-lang="http">POST /add HTTP/1.1
+Content-Type: application/json;charset=UTF-8
+Content-Length: 23
+Host: localhost:8080
+
+{"id":null,"name":null}</code></pre>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-10 12:48:06 CST
+Last updated 2021-02-10 13:22:04 CST
 </div>
 </div>
 </body>
