--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -495,10 +495,21 @@ Host: localhost:8080
 Host: localhost:8080</code></pre>
 </div>
 </div>
+<div class="paragraph">
+<p><strong><em>When Removing a song to a playlist
+</em></strong></p>
+</div>
+<div class="listingblock">
+<div class="title">request</div>
+<div class="content">
+<pre class="highlight nowrap"><code class="language-http" data-lang="http">POST /playlist/playlist%201/Another%20song HTTP/1.1
+Host: localhost:8080</code></pre>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-10 15:06:54 CST
+Last updated 2021-02-10 15:17:49 CST
 </div>
 </div>
 </body>
