Adding Docs for removing songs and retrieving all songs

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -491,7 +491,7 @@ Host: localhost:8080
 <div class="listingblock">
 <div class="title">request</div>
 <div class="content">
-<pre class="highlight nowrap"><code class="language-http" data-lang="http">POST /playlist/playlist%201/Another%20song HTTP/1.1
+<pre class="highlight nowrap"><code class="language-http" data-lang="http">POST /playlist/add/playlist%201/Another%20song HTTP/1.1
 Host: localhost:8080</code></pre>
 </div>
 </div>
@@ -502,14 +502,25 @@ Host: localhost:8080</code></pre>
 <div class="listingblock">
 <div class="title">request</div>
 <div class="content">
-<pre class="highlight nowrap"><code class="language-http" data-lang="http">POST /playlist/playlist%201/Another%20song HTTP/1.1
+<pre class="highlight nowrap"><code class="language-http" data-lang="http">POST /playlist/add/playlist%201/Another%20song HTTP/1.1
+Host: localhost:8080</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p><strong><em>Get Songs in a playlist
+</em></strong></p>
+</div>
+<div class="listingblock">
+<div class="title">request</div>
+<div class="content">
+<pre class="highlight nowrap"><code class="language-http" data-lang="http">GET /playlist/playlist%201/ HTTP/1.1
 Host: localhost:8080</code></pre>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-10 15:17:49 CST
+Last updated 2021-02-10 16:43:26 CST
 </div>
 </div>
 </body>
